--- a/TextToSpeechApp.csproj
+++ b/TextToSpeechApp.csproj
@@ -6,5 +6,15 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+	<ItemGroup>
+		<PackageReference Include="Microsoft.Windows.Compatibility"
+						  Version="8.0.8" />
+		<PackageReference Include="System.Windows.Extensions"
+						  Version="8.0.0" />
+		<PackageReference Include="Xabe.FFmpeg"
+						  Version="5.2.6" />
+		<PackageReference Include="Xabe.FFmpeg.Downloader"
+						  Version="5.2.6" />
+	</ItemGroup>
 
 </Project>
